# CompilationPrincipleProject

./: .gitignore  CMakeLists.txt  MinimizedDFA.cpp  MinimizedDFA.h  main.cpp  vcpkg.json  widget.cpp  widget.h  widget.ui
Config/: CMakeLists.txt  grammar  lex  lex.json  minic_input.txt  minic_output.txt  output.c  sample.bak.c  sample.c
Grammar/: BNF.cpp  BNF.h  CMakeLists.txt  utils.cpp  utils.h
Lex/: CMakeLists.txt  DFA.cpp  DFA.h  LexParser.cpp  LexParser.h  MinimizedDFA.cpp  MinimizedDFA.h  NFA.cpp  NFA.h  Postfix.cpp  Postfix.h
Lib/: CMakeLists.txt  DFA.cpp  DFA.h  DisjointSet.cpp  DisjointSet.h  MinimizedDFA.cpp  MinimizedDFA.h  NFA.cpp  NFA.h  Postfix.cpp
